k8s-jenkins/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        fsGroup: 1000  # 💡 Asegura que el grupo de Jenkins tenga permisos en el volumen

      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          securityContext:
            runAsUser: 1000  # 💡 Ejecutar Jenkins con el usuario correcto
            fsGroup: 1000
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/var/jenkins_home"
              name: jenkins-home

      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-pvc
