k8s-jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: LoadBalancer
  loadBalancerIP: 34.54.6.229
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: jenkins
